<resources>
    <!--Main Screen -->
    <string name="app_name">Medialarm</string>
    <string name="str_no_active">Kein \nMediAlarm \naktiv</string>
    <string name="btn_create_alarm">Berühren für einrichten eines Alarms</string>
    <!--Uebersicht-->
    <string name="title_activity_uebersicht">Übersicht</string>
    <string name="delete_alarm">Löschen</string>
    <string name="edit_alarm">Beareiten</string>
    <string name="create_alarm">Neu</string>
    <string name="title_activity_alarm_einrichten">Alarm einrichten</string>
    <!--AlarmEinrichten-->
    <string name="med_pic">Medikament fotografieren</string>
    <string name="piece">Stück</string>
    <string name="ml">ml</string>
    <string name="drops">Tropfen</string>
    <string name="daily">pro Tag</string>
    <string name="time_settings">Zeitangaben</string>
    <string name="med_information">Hinweise</string>
    <!--ZeitangabenEinrichten-->
    <string name="start">Beginn</string>
    <string name="time">Uhrzeit</string>
    <string name="today">Heute</string>
    <string name="now">Jetzt</string>
    <string name="time_period">Zeitraum</string>
    <string name="intake">Einnahme alle</string>
    <string name="hour">h</string>
    <string name="in_5_minutes">in 5 Minuten</string>
    <string name="stop_alarm">Alarm beenden</string>
    <string name="set_alarm_time">Alarmzeit fertig</string>
    <string name="cancel_alarm">Alarm abbrechen</string>
    <string name="repeat_2_min">Wiederholung in 2 Min.</string>


</resources>
