<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trout_backgrnd"
    android:orientation="vertical"
    tools:context="com.example.nk.trout.appmedialarm.Uebersicht">
<!-- Screen 5: Alarm Einrichten -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:src="@drawable/trout" />

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black" />

            </LinearLayout>

            <TextView
                style="@style/Headline"
                android:layout_below="@id/header"
                android:id="@+id/title_alarm_einrichten"
                android:text="@string/title_activity_alarm_einrichten"/>
        </RelativeLayout>
        <TextView
            style="@style/Texts"
            android:id="@+id/txt_med_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_pic"
            android:textSize="34dp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>
        <ImageView
            android:id="@+id/pic_med_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <Spinner
                android:id="@+id/amount"
                android:layout_toLeftOf="@+id/units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:text="Tropfen">
            </Spinner>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:text="10"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@+id/frequency"
                android:id="@+id/units">
            </Spinner>
            <Spinner
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                tools:text="10">

            </Spinner>
            <TextView
                style="@style/Texts"
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:textSize="28dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/frequency"
                android:text="@string/daily"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="@string/time_settings"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/btn_time_settings"/>
            <TextView
                style="@style/Texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_time_settings"
                tools:text="Ab 01.12.2017 bis 05.12.2017"
                android:layout_below="@id/btn_time_settings"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="@string/med_information"
                android:layout_centerHorizontal="true"
                android:id="@+id/btn_med_information"
                android:layout_below="@id/txt_time_settings"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>